--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -3,7 +3,7 @@
 - 拉取仓库有2个方法
 #
 - 1、方法一
-![xm1](https://github.com/danshui-git/shuoming/blob/master/doc/la1.png)
+![xm1](<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la1.png" />)
 ![xm1](https://github.com/danshui-git/shuoming/blob/master/doc/la1.png)
 #
 #
