--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -4,8 +4,8 @@
 #
 - 1、方法一
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la1.png" />
-![xm1](https://github.com/danshui-git/shuoming/blob/master/doc/la1.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la2.png" />
 #
 #
 - 2、方法二
-![xm1](https://github.com/danshui-git/shuoming/blob/master/doc/la1.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
