--- a/2启动说明.md
+++ b/2启动说明.md
@@ -6,11 +6,11 @@
 #
 - 一定要操作到最后那个图片那里，等SSH展开，复制代码
 #
-![xm1](doc/b1.png)
-![xm1](doc/b2.png)
-![xm1](doc/b3.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/b1.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/b2.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/b3.png" />
 #
-![xm1](doc/b4.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/b4.png" />
 #
 #
 # 如果没开SSH连接的话按 Actions 看看有没有启动就可以了，不需要其他操作
