--- a/删除和修改文件.md
+++ b/删除和修改文件.md
@@ -1,41 +1,41 @@
 # 删除和修改文件说明：
 #
-![xm1](doc/s1.png)
-![xm1](doc/s2.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s1.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s2.png" />
 #
 #
 #
 # 创建文件
 - 在你拉取我仓库后的首页上点击Add file可以创建.sh跟.config文件
 #
-![xm1](doc/s4.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s4.png" />
 #
 #
 #
 - 在你拉取我仓库后的首页的《.github/workflows》里面可以创建.yml主文件
 #
-![xm1](doc/s3.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s3.png" />
 #
 #
 #
 # 停止正在运行点编译
-![xm1](doc/s6.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s6.png" />
 #
 #
 #
 # 修改仓库名字
-![xm1](doc/s7.png)
-![xm1](doc/s8.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s7.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s8.png" />
 #
 #
 #
 # 删除不要点仓库
-![xm1](doc/s7.png)
-![xm1](doc/s9.png)
-![xm1](doc/s10.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s7.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s9.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s10.png" />
 #
 #
 #
 #
 # 删除编译了后，或者编译失败，不需要的固件
-![xm1](doc/s5.png)
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s5.png" />
