--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,4 +1,5 @@
 # 增加可以删除不需要的固件
+
     - name: 整理固件文件夹
       id: organizer
       run: |
@@ -9,3 +10,26 @@
         rm -rf packages
         echo "::set-env name=FIRMWARE::$PWD"
         echo "::set-output name=status::success"
+        
+        
+-  增加可以删除不要的固件，不过要在主文件.yml里面手动增加的，删除不要的固件方法：
+
+    - name: 整理固件文件夹
+      id: organizer
+      run: |
+        cd openwrt/bin/targets/*/*
+        rm -rf packages && mkdir packages
+        
+        find -name "*feeds.buildinfo*" | xargs -i mv -f {} packages
+        find -name "*sha256sums*" | xargs -i mv -f {} packages
+        
+        rm -rf packages
+        echo "::set-env name=FIRMWARE::$PWD"
+        echo "::set-output name=status::success"
+        
+- 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除了feeds.buildinfo跟sha256sums两个文件，要再删除其他的，增加以下格式代码：
+- find -name "*这里填写你要删除的文件名字*" | xargs -i mv -f {} packages
+- 文件命可以全名
+- 可以.后缀,比如【.buildinfo】如果你这样填写到文件名的地方，所有这个后缀的文件都删除了，包括【config.buildinfo】文件，其他的也一样道理
+- 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
+- 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，把他给删除了就可以了
