--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,6 +1,6 @@
-# 增加可以删除不需要的固件
+# 编译时候删除不需要的文件（减负固件包）
 
-    - name: 整理固件文件夹(没有增加删除的时候，我设置了默认删除)
+    - name: 整理固件文件夹(我设置了默认删除feeds.buildinfo跟sha256sums两个文件)
       id: organizer
       run: |
         cd openwrt/bin/targets/*/*
@@ -14,7 +14,7 @@
 
 
 
-    - name: 整理固件文件夹（这个就是增加了删除的，我自己使用的）
+    - name: 整理固件文件夹（这个就是增加了删除的，这个只是我随便整理的一个模板，实际要删除什么，要你自己编译好固件后再决定）
       id: organizer
       run: |
         cd openwrt/bin/targets/*/*
@@ -31,9 +31,9 @@
         echo "::set-output name=status::success"
         
         
--  增加可以删除不要的固件，不过要在主文件.yml里面手动增加的     
+-  编译时候删除不要的固件，不过要在主文件.yml里面手动增加的     
 - 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除了feeds.buildinfo跟sha256sums两个文件
 - 文件命可以全名
 - 可以.后缀,比如【.buildinfo】如果你这样填写到文件名的地方，所有这个后缀的文件都删除了，包括【config.buildinfo】文件，其他的也一样道理
 - 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
-- 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，把他给删除了就可以了
+- 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
