--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -36,4 +36,5 @@
 - 文件命可以全名
 - 可以.后缀,比如【.buildinfo】如果你这样填写到文件名的地方，所有这个后缀的文件都删除了，包括【config.buildinfo】文件，其他的也一样道理
 - 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
+- 上面那些文件名是怎么来的，你只要细心的看看你编译好固件后的固件文件夹里面就可以看出来了
 - 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
