--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -11,7 +11,7 @@
         echo "::set-env name=FIRMWARE::$PWD"
         echo "::set-output name=status::success"
 
-
+#
 
 
     - name: 整理固件文件夹（这个就是增加了删除的，这个只是我随便整理的一个模板，实际要删除什么，要你自己编译好固件后再决定）
@@ -30,7 +30,7 @@
         echo "::set-env name=FIRMWARE::$PWD"
         echo "::set-output name=status::success"
         
-        
+ #       
 -  编译时候删除不要的固件，不过要在主文件.yml里面手动增加的     
 - 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除了feeds.buildinfo跟sha256sums两个文件
 - 文件命可以全名
@@ -38,3 +38,8 @@
 - 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
 - 上面那些文件名是怎么来的，你只要细心的看看你编译好固件后的固件文件夹里面就可以看出来了
 - 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
+#
+#
+#
+- 编译固件时候选择【】后，img格式文件就会成为.img.gz的压缩文件
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/gujian.png" />
