--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -41,5 +41,5 @@
 #
 #
 #
-- 编译固件时候选择【】后，img格式文件就会成为.img.gz的压缩文件
+- 编译固件时候选择【GZip images】后，img格式文件就会成为.img.gz的压缩文件
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/gujian.png" />
