--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -14,7 +14,7 @@
 #
 
 
-    - name: 整理固件文件夹（这个就是增加了删除的，这个只是我随便整理的一个模板，实际要删除什么，要你自己编译好固件后再决定）
+    - name: 整理固件文件夹（删除文件示例，在上下 rm -rf 中间增加代码，这个只是我随便整理的一个模板，实际要删除什么，要你自己编译好固件后再决定）
       id: organizer
       run: |
         cd openwrt/bin/targets/*/*
