--- a/根目录文件说明.md
+++ b/根目录文件说明.md
@@ -7,4 +7,4 @@
 #
 - `《diy-lede.sh》`&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一键编译脚本的设置自定义插件文件，想增加啥插件，基本都在这里完成了（文件名字可以随便改，保持.sh格式就可以，还要在《.github/workflows》里面主文件修改好对应的名字 ）
 #
-- `《diy.config》`&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 配置文件，你SSH远程配置好了一次，编译完成后，在固件文件夹里面有一个config.buildinfo文件的，用记事本打开，然后把里面的内容都复制，然后粘贴覆盖diy.config里面原来的内容，这样就会保持你的配置了。（文件名字可以随便改，保持.config格式就好了，还要在《.github/workflows》里面主文件修改好对应的名字）
+- `《diy.config》`&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 编译固件时候可以选择提取config.buildinfo文件的，用记事本打开，然后把里面的内容都复制，然后粘贴覆盖diy.config里面原来的内容，这样就会保持你的配置了。保持配置后如果不更改插件的情况下可以关闭SSH远程，然后设定定时编译来定时启动编译固件。（文件名字可以随便改，保持.config格式就好了，还要在《.github/workflows》里面主文件修改好对应的名字）
