--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,11 +1,11 @@
 # 编译时候删除不需要的文件（减负固件包）
 
-    - name: 整理固件文件夹(我设置了默认删除feeds.buildinfo跟sha256sums两个文件)
+    - name: 整理固件文件夹(我设置了默认删除feeds.buildinfo跟version.buildinfo和sha256sums三个文件)
       id: organizer
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages && mkdir packages
-        find -name "*feeds.buildinfo*" | xargs -i mv -f {} packages
+        find -name "*.buildinfo*" | xargs -i mv -f {} packages
         find -name "*sha256sums*" | xargs -i mv -f {} packages
         rm -rf packages
         echo "::set-env name=FIRMWARE::$PWD"
@@ -19,8 +19,7 @@
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages && mkdir packages
-        find -name "*feeds.buildinfo*" | xargs -i mv -f {} packages
-        find -name "*version.buildinfo*" | xargs -i mv -f {} packages
+        find -name "*.buildinfo*" | xargs -i mv -f {} packages
         find -name "*sha256sums*" | xargs -i mv -f {} packages
         find -name "*.manifest*" | xargs -i mv -f {} packages
         find -name "*.bin*" | xargs -i mv -f {} packages
@@ -32,12 +31,13 @@
         
  #       
 -  编译时候删除不要的固件，不过要在主文件.yml里面手动增加的     
-- 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除了feeds.buildinfo跟sha256sums两个文件
-- 文件命可以全名
-- 可以.后缀,比如【.buildinfo】如果你这样填写到文件名的地方，所有这个后缀的文件都删除了，包括【config.buildinfo】文件，其他的也一样道理
+- 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除feeds.buildinfo跟version.buildinfo和sha256sums三个文件
+- 文件名可以全名
+- 可以.后缀,比如【.bin】，这样就删除了全部.bin后缀的固件，因为X86机型我不需要这样的固件就删除了，其他机型要删除什么你不需要的就按你自己需要删除，其他的也一样道理
 - 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
 - 上面那些文件名是怎么来的，你只要细心的看看你编译好固件后的固件文件夹里面就可以看出来了
-- 反正编译时候选择好安装格式，然后编译成功，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
+- 反正编译时候选择好安装格式，然后编译成功一次后，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
+- 一定要编译成功一次后再来删除不需要的固件，因为各个机型不一样，编译成功后，在固件文件夹里面有你不需要的再来这里删除
 #
 #
 #
