--- a/本地提取.config.md
+++ b/本地提取.config.md
@@ -18,9 +18,9 @@
 #
 - `提取.config：`cat seed.config
 #
-- `运行cat seed.config后在SSH中显示很多CONFIG的，那些就是了，都复制起来粘贴到github的diy.config就可以了`
+- 运行`cat seed.config`后在SSH中显示很多CONFIG的，那些就是了，都复制起来粘贴到github的diy.config就可以了
 #
-- `有些命令前面带点的，要看注意清楚`
+- 有些命令前面带点的，要注意看清楚
 
 
 #
@@ -32,7 +32,7 @@
 - sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget swig rsync
 - git clone https://github.com/coolsnowwolf/lede
 - cd lede
-- cd package    `把要加的插件都用git clone下载到这里面`
+- cd package    `把要加的全部插件都用git clone下载到这里面`比如增加clash出国插件 git clone https://github.com/frainzy1477/luci-app-clash.git
 - cd ..
 - ./scripts/feeds update -a
 - ./scripts/feeds install -a
