--- a/其他说明.md
+++ b/其他说明.md
@@ -5,6 +5,15 @@
 - 不要ipv6：Global build settings ---> Enable IPv6 support in packages (NEW)（不选），就好了
 #
 - 网络共享luci-app-samba默认是去不掉的，在：Extra packages ---> autosamba（不选），就可以不选luci-app-samba
+#
+- 编译K3路由器固件如果要luci-app-k3screenctrl这个功能的话，lede的源码不能使用，源码天天更新或者有更新好的，这个也说不清楚，用ProJect-18.06-4.19能直接编译成功，不过我没路由器测试，所以没测试过能不能用
+- 用19.07的增加以下代码也能编译成功，等你们自己测试了，我没机器来测试
+git clone https://github.com/lwz322/luci-app-k3screenctrl.git package/k3/luci-app-k3screenctrl
+rm -rf ./package/lean/k3screenctrl && git clone https://github.com/lwz322/k3screenctrl.git package/k3/k3screenctrl
+git clone https://github.com/lwz322/k3screenctrl_build.git package/k3/k3screenctrl_build
+#
+- 编译k2p路由器固件的话，默认固件大小是不能超过15MB的，超过这个大小就不出_k2p-squashfs-sysupgrade.bin固件了，增加以下代码能把固件设定到30MB，不过我没机器测试，不知道编译出来能不能用
+sed -i 's/IMAGE_SIZE := 15744k/IMAGE_SIZE := 32448k/g' ./target/linux/ramips/image/mt7621.mk
 # 
 - files大法：就是把安装好的固件设置好的文件提取出来，编译时候放进去，以后安装好固件就是你以前设置好的，就不需要再重复的设置那么麻烦了
 - 使用方法：用[WinSCP](https://winscp.net/eng/download.php)(文件协议F选择SCP)连接你路由器，在etc/config里面把想要文件拖到你电脑上，在电脑上建立一个files\etc\config，把你拖出来的文件都放这里，然后把files文件夹传到github根目录就可以了，我只尝试etc/config这个文件夹里面有效的，其他文件没试过，你们可以多做尝试
