--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -4,3 +4,5 @@
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
 - 3、
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
+- 4、
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
