--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -3,13 +3,13 @@
 - 2、
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
 - 3、
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
+#<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
 - 4、
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
+#<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
 #
 - 5、增加了连个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
 #
-- diy文件夹里面可以直接放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我做里面放了两个文件，一个是banner文件<a>
+- diy文件夹里面可以直接放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我做里面放了两个文件，一个是banner文件</ba>
 一个是替换https-dns-proxy.init文件,解决用LEDE源码加入passwall编译固件后DNS转发127.0.0.1#5053和12.0.0.1#5054问题，这个文件在diy-2.sh定义文件就有代码了，你们拉取仓库后把diy-2.sh启动，把这个删除了吧，就是做个列子的
 #
 - pacthes补丁文件夹
