--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -13,6 +13,6 @@
 
 一个是替换https-dns-proxy.init文件,解决用LEDE源码加入passwall编译固件后DNS转发127.0.0.1#5053和12.0.0.1#5054问题，这个文件在diy-2.sh定义文件就有代码了，你们拉取仓库后把diy-2.sh启动，把这个删除了吧，就是做个列子的
 #
-- pacthes补丁文件夹[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)
+- pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误，我在里面做了个增加DNS、网关、IPV4广播，不适合所有人使用的，你们拉取仓库后删除了吧。[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)
 #
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的补丁拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
