--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -16,3 +16,5 @@
 - pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误，我在里面做了个增加DNS、网关、IPV4广播，不适合所有人使用的，你们拉取仓库后删除了吧。[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)
 #
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的补丁拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
+#
+- 5、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器设置，不知道编译出来的固件可以不可以使用，d2的固件默认好像是不能超过31MB，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
