--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -2,12 +2,12 @@
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 - 2、
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
-- 3、
+- 3、<br>
 #<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
 - 4、<br>
 #<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
 #
-- 5、增加了连个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
+- 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
 #
 - diy文件夹里面可以直接放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我做里面放了两个文件，一个是banner文件<br>
 
@@ -17,4 +17,4 @@
 #
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的补丁拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
 #
-- 5、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器设置，不知道编译出来的固件可以不可以使用，d2的固件默认好像是不能超过31MB，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
+- 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器设置，不知道编译出来的固件可以不可以使用，d2的固件默认好像是不能超过31MB，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
