--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,11 +1,11 @@
-- 1、build文件夹里面就是编译脚本了，可以自己建立N个机型一起编译的，也可以单独的用每个源码x86文件夹做为编译其他机型使用
+- 1、build文件夹里面就是编译脚本了，可以自己建立N个机型一起编译的，也可以单独的用每个源码x86文件夹做为编译其他机型使用<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
-- 2、
+- 2、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
 - 3、<br>
-#<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
 - 4、<br>
-#<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
 #
 - 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
 #
