--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -5,7 +5,7 @@
 - 3、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
 - 4、<br>
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" />
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" /><br>
 #
 - 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
 #
