--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -18,3 +18,5 @@
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的补丁拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
 #
 - 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，d2的固件默认好像是不能超过31MB，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
+#
+- 6、增加了微信通知跟自动发布固件功能。[教程](https://github.com/danshui-git/shuoming/edit/master/ms.md)
