--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,4 +1,5 @@
 - 1、build文件夹里面就是编译脚本了，可以自己建立N个机型一起编译的，也可以单独的用每个源码x86文件夹做为编译其他机型使用<br>
+- 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码。选择【Lienol_x86_64】是19.07的、选择【Project_x86_64】是ctcgfw的18.06
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 - 2、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
