--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -18,6 +18,6 @@
 #
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的设置文件拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
 #
-- 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认好像是不能超过31MB，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
+- 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认好像是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
 - 6、增加了微信通知跟自动发布固件功能。[教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)
