--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -8,7 +8,7 @@
 - 4、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" /><br>
 #
-- 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了
+- 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了，没文件在的情况下是建立不了空文件夹的，你们要使用到diy、pacthes、files时候自己建立就是了
 
 - diy文件夹里面可以直接放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在里面放了两个文件，一个是banner文件<br>
 
