--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,7 +10,7 @@
 #
 - 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了，没文件在的情况下是建立不了空文件夹的，你们要使用到diy、pacthes、files时候自己建立就是了
 
-- diy文件夹里面可以直接放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在里面放了两个文件，一个是banner文件<br>
+- diy文件夹里面可以按路径放入文件替换源码文件，diy文件夹里面就等源码的根目录要替换什么文件就对应上源码的文件路径所在，能替换啥那些你们自己多做研究吧，我在里面放了两个文件，一个是banner文件<br>
 
 - 一个是替换https-dns-proxy.init文件,解决用LEDE源码加入passwall编译固件后DNS转发127.0.0.1#5053和12.0.0.1#5054问题，这个文件在diy-2.sh定义文件就有代码了，你们拉取仓库后把diy-2.sh启动，把这个删除了吧，就是做个列子的
 #
