--- a/选择机型.md
+++ b/选择机型.md
@@ -1,2 +1,2 @@
-选择要编译的源码跟机型
+# 选择要编译的源码跟机型，在.github/workflows文件夹里面的build-openwrt.yml文件修改
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x3.png" />
