--- a/启动2.md
+++ b/启动2.md
@@ -1,2 +1,3 @@
-# 启动说明，以下图片是几个图片集一张的
+# 启动说明，以下图片是几个图片集一张的,按步骤一步步点击就可以了
+
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/qidong2.png" />
