--- a/其他说明.md
+++ b/其他说明.md
@@ -1,6 +1,6 @@
 # 其他说明：
 #
-- 支持ipv6：1、Global build settings ---> Enable IPv6 support in packages (NEW)（不选）
+- 支持ipv6：1、Global build settings ---> Enable IPv6 support in packages (NEW)（选上）
 -             2、Extra packages ---> ipv6helper（选上）
 -             3、安装好固件后在-网络-DHCP/DNS里的高级设置-把“禁止解析 IPv6 DNS 记录”的“√”去掉
 #
