--- a/本地提取.config.md
+++ b/本地提取.config.md
@@ -18,7 +18,7 @@
 #
 - `提取.config：`cat seed.config
 #
-- 运行`cat seed.config`后在SSH中显示很多CONFIG的，那些就是了，都复制起来粘贴到github的diy.config就可以了
+- 运行`cat seed.config`后在SSH中显示很多CONFIG的，那些就是了，都复制起来粘贴到 build-对应机型的.config里面覆盖原来.config内容就可以了
 #
 - 有些命令前面带点的，要注意看清楚
 
