--- a/定时编译说明.md
+++ b/定时编译说明.md
@@ -1,6 +1,6 @@
 # 定时编译说明：
 # 
-- 把《diy.config》配置好后，如果在不需要修改配置的情况下，在《.github/workflows》的主脚本中关闭SSH功能，就可以设置定时编译，或者在手机上启动编译（定时编译一定要关闭SSH功能，要不然SSH那里没管的话就会卡在那里，编译失败）
+- 把《.config》配置好后，如果在不需要修改配置的情况下，在build文件夹里面的对应机型文件夹的‘settings.ini’设置关闭SSH功能，就可以设置定时编译，或者在手机上启动编译（定时编译一定要关闭SSH功能，要不然SSH那里没管的话就会卡在那里，编译失败）
 # 
 - （[utc时间对照表](https://time.is/UTC)）脚本是按utc时间开始的，要跟中国时间换算一下
 # 
