--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -8,19 +8,22 @@
 - 4、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" /><br>
 #
-- 5、增加了两个扩展文件夹，一个是diy，一个是pacthes，files文件夹的功能以前就存在了，没文件在的情况下是建立不了空文件夹的，你们要使用到diy、pacthes、files时候自己建立就是了
+- 5、build-对应机型的 diy、pacthes、patch-p1、files 文件夹说明
 
-- diy文件夹里面可以按路径放入文件替换源码文件，diy文件夹里面就等源码的根目录要替换什么文件就对应上源码的文件路径所在，能替换啥那些你们自己多做研究吧，我在里面放了两个文件，一个是banner文件<br>
+- diy文件夹里面可以按路径放入文件替换源码文件，diy文件夹里面就等源码的根目录要替换什么文件就对应上源码的文件路径所在，能替换啥那些你们自己多做研究吧，我在Lede_x86_64里面放了两个文件<br>
 
-- 一个是替换https-dns-proxy.init文件,解决用LEDE源码加入passwall编译固件后DNS转发127.0.0.1#5053和12.0.0.1#5054问题，这个文件在diy-2.sh定义文件就有代码了，你们拉取仓库后把diy-2.sh启动，把这个删除了吧，就是做个列子的
+
+    一个是banner文件，banner文件是默认存在的，可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
+
+    一个是替换https-dns-proxy.init文件,解决用LEDE源码加入passwall编译固件后DNS转发127.0.0.1#5053和12.0.0.1#5054问题，这个文件在diy-2.sh定义文件就有代码了，你们拉取仓库后把这个删除了，就是做个列子的
 #
 - pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误，我在里面做了个增加DNS、网关、IPV4广播，不适合所有人使用的，你们拉取仓库后删除了吧。[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)<br>
 
-    pacthes文件夹里面的patch补丁使用的是-p0命令修改的，如果需要用-p1命令的话，在对应机型文件夹里面建立一个【patch-p1】文件夹来存放patch补丁就行了，build/Project_nanopi_r2s文件夹就有个例子
+    pacthes文件夹里面的patch补丁使用的是-p0命令修改的，如果需要用-p1命令的话，在build-对应机型文件夹里面建立一个【patch-p1】文件夹来存放patch补丁就行了，build/Project_nanopi_r2s文件夹就有个例子参考
 
 #
-- files固件设置文件替换，可以把固件设置好的etc文件夹里面的设置文件拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置，我放了个smartdns做列子，你们拉取仓库后可以删除了
+- files固件设置文件替换，可以把固件设置好的etc文件夹里面的设置文件拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置。是不是固件里面的etc文件夹所有的设置文件都可以替换，这个我也没做尝试，你们自己尝试下吧，我放了个smartdns做列子，你们拉取仓库后可以删除了
 #
-- 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认好像是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧，19.07跟lede的做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
+- 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧，Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
 - 6、增加了微信通知跟自动发布固件功能。[教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)
