--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,7 +10,7 @@
 #
 - 5、build-对应机型的 diy、pacthes、patch-p1、files 文件夹说明
 
-- diy文件夹里面可以按路径放入文件替换源码文件，diy文件夹里面就等源码的根目录要替换什么文件就对应上源码的文件路径所在，能替换啥那些你们自己多做研究吧，我在【Lede_x86_64】里面放了两个文件做例子<br>
+- diy文件夹里面可以按源码对应路径放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在【Lede_x86_64】里面放了两个文件做例子<br>
 
 
     一个是banner文件，banner文件是默认存在的，可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
@@ -24,6 +24,7 @@
 
 #
 - files固件设置文件替换，可以把固件设置好的etc文件夹里面的设置文件拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置。是不是固件里面的etc文件夹所有的设置文件都可以替换，这个我也没做尝试，你们自己尝试下吧<br>
+    
     我在【Lede_x86_64】里面放了个smartdns做列子，你们拉取仓库后可以删除了
 #
 - 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧，Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
