--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -22,7 +22,7 @@
 - pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误  [提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)<br><br>
     我在【Lede_x86_64】里面做了个增加DNS、网关、IPV4广播的patch补丁，不适合所有人使用的，你们拉取仓库后删除了吧。
 
-    pacthes文件夹里面的patch补丁使用的是-p0命令修改的，如果需要用-p1命令的话，在build-对应机型文件夹里面建立一个【patch-p1】文件夹来存放patch补丁就行了，build/Project_nanopi_r2s文件夹就有个例子参考<br>
+    pacthes文件夹里面的patch补丁使用的是-p0命令，如果需要用-p1命令的话，在build-对应机型文件夹里面建立一个【patch-p1】文件夹来存放patch补丁就行了，build/Project_nanopi_r2s文件夹就有个例子参考<br>
 
     Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
