--- a/删除和修改文件.md
+++ b/删除和修改文件.md
@@ -29,7 +29,7 @@
 #
 #
 #
-# 删除不要点仓库
+# 删除不要的仓库
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s7.png" />
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s9.png" />
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/s10.png" />
