--- a/本地提取.config.md
+++ b/本地提取.config.md
@@ -6,7 +6,7 @@
 
 # 会本地编译的可以在本地提取.config文件夹
 
-- `把要加的插件都用git clone下载到package文件夹里面`
+- `把要加的插件都下载到package文件夹里面`
 #
 - `清除.config配置（可执行可不执行）：`rm -rf ./tmp && rm -rf .config 
 #
@@ -38,7 +38,7 @@
 - sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget swig rsync
 - git clone https://github.com/coolsnowwolf/lede
 - cd lede
-- cd package    `把要加的全部插件都用git clone下载到这里面`比如增加clash出国插件 git clone https://github.com/frainzy1477/luci-app-clash.git
+- cd package    `把要加的全部插件都下载到这里面`，比如增加clash出国插件 git clone https://github.com/frainzy1477/luci-app-clash.git
 - cd ..
 - ./scripts/feeds update -a
 - ./scripts/feeds install -a
@@ -47,3 +47,5 @@
 - ./scripts/diffconfig.sh > seed.config
 - cat seed.config
 - 其实就是coolsnowwolf/lede大神源码的编译流程，就是不用编译而已，就提取.config
+
+- 以前对应的是coolsnowwolf/lede大神的源码，你可以拉取其他作者的源码的，都一样操作
