--- a/本地提取.config.md
+++ b/本地提取.config.md
@@ -1,5 +1,5 @@
 # 保存插件配置方法
-- 编译固件之前打开‘SSH连接服器配置固件’跟择‘上传【.config】配置文件在github空间’，编译的时候SSH连接服务器修改好插件跟其他应用，编译成功后会有固件跟.config配置文件的，下载.config配置文件后，解压得到一个【config.buildinfo】文件，用记事本打开，把里面的内容都复制，然后覆盖对应机型.config里面原来的内容，这样就会保持你的配置了，下次编译如果不修改配置的话，就可以不用打开SSH连接了，不打开SSH连接就可以使用定时编译功能，或者直接手机启动编译
+- 编译固件之前打开‘SSH连接服器配置固件’跟‘上传【.config】配置文件在github空间’，编译的时候SSH连接服务器修改好插件跟其他应用，编译成功后会有固件跟.config配置文件的，下载.config配置文件后，解压得到一个【config.buildinfo】文件，用记事本打开，把里面的内容都复制，然后覆盖对应机型.config里面原来的内容，这样就会保持你的配置了，下次编译如果不修改配置的话，就可以不用打开SSH连接了，不打开SSH连接就可以使用定时编译功能，或者手机启动编译
 #
 #
 #
