--- a/本地提取.config.md
+++ b/本地提取.config.md
@@ -6,6 +6,8 @@
 
 # 会本地编译的可以在本地提取.config文件夹
 
+- SSH软件连接ubuntu系统
+
 - `把要加的插件都下载到package文件夹里面`
 #
 - `清除.config配置（可执行可不执行）：`rm -rf ./tmp && rm -rf .config 
@@ -24,16 +26,17 @@
 #
 - `提取.config：`cat seed.config
 #
-- 运行`cat seed.config`后在SSH中显示很多CONFIG的，那些就是了，都复制起来粘贴到 build-对应机型的.config里面覆盖原来.config内容就可以了
+- 运行`cat seed.config`后在SSH软件中显示很多CONFIG的，那些就是了，都复制起来粘贴到 build-对应机型的.config里面覆盖原来.config内容就可以了
 #
 - 有些命令前面带点的，要注意看清楚
-
+- 
 
 #
 #
 #
 # 首次本地提取流程(随便说说，其实直接云编译的SSH生成.config也挺方便的，不过就是一定要编译一次固件比较费时而已)
-- 安装ubuntu-18.04.4 (然后依次执行以下命令)
+- 安装ubuntu-18.04.4
+- SSH软件连接ubuntu系统 (然后依次执行以下命令)
 - sudo apt-get update
 - sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget swig rsync
 - git clone https://github.com/coolsnowwolf/lede
