--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,7 +10,7 @@
 - 4、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x4.png" /><br>
 #
-- 5、build-对应机型的 diy、pacthes、patch-p1、files 文件夹说明
+- 5、build-对应机型的 diy、pacthes、files 文件夹说明
 
 - diy文件夹里面可以按源码对应路径放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在【Lede_x86_64】里面放了banner文件文件<br>
 
