--- a/手动开始.md
+++ b/手动开始.md
@@ -1,7 +1,5 @@
 # 启动编译的按钮
-
-- 加了个启动编译的按钮不过也挺麻烦的，看个人需要吧，点星启动方便是方便，不过别人给你点星就会有一个几秒的编译记录也烦
 #
-- 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤一步步来就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
+#### 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤一步步来就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
 #
 -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd02.png" />
