--- a/手动开始.md
+++ b/手动开始.md
@@ -2,4 +2,10 @@
 #
 #### 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤一步步来就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
 #
--!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
+## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
+#
+#### 如果打开了SSH远程，就一定要操作到最后那个图片那里，等SSH展开，复制代码
+
+## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
+## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
+## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
