--- a/手动开始.md
+++ b/手动开始.md
@@ -9,3 +9,8 @@
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd003.png" />
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd004.png" />
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd005.png" />
+#
+#
+# 如果没开SSH连接的话按 Actions 看看有没有启动就可以了，不需要其他操作
+#
+# 如果开了SSH连接，就一定要连接，然后正常退出SSH连接才会继续编译，要不然就卡这里，然后编译失败
