--- a/手动开始.md
+++ b/手动开始.md
@@ -4,8 +4,9 @@
 #
 ## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
 #
-## 如果打开了SSH远程，就一定要操作到最后那个图片那里，等SSH展开，复制代码
-
+#
+# 如果打开了SSH远程，就一定要操作到最后那个图片那里，等SSH展开，复制代码
+#
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd003.png" />
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd004.png" />
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd005.png" />
