--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,7 +1,7 @@
 # 脚本简单介绍，新手最好认真的看看，或者对你有帮助的
 
-- 1、build文件夹里面就是编译脚本了，可以自己建立N个机型一起编译的，也可以单独的用每个源码x86文件夹做为编译其他机型使用<br>
-- 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码。选择【Lienol_x86_64】是Lienol的19.07、选择【Project_x86_64】是ctcgfw的18.06，你也可以增加更多的源码创建更多的选择，也可以现有的3个源码都创建你使用的路由器固件来编译的，看看那个好用
+- 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用每个源码x86文件夹做为编译其他机型使用<br>
+- 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码。选择【Lienol_x86_64】是Lienol的19.07。选择【Project_x86_64】是ctcgfw的18.06。一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 - 2、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2.png" />
@@ -12,7 +12,7 @@
 #
 - 5、build-对应机型的 diy、pacthes、files 文件夹说明
 
-- diy文件夹里面可以按源码对应路径放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在【Lede_x86_64】里面放了banner文件文件<br>
+- diy文件夹里面可以按源码对应路径放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在所有机型里面放了banner文件文件<br>
 
 
     你喜欢的话可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
@@ -23,7 +23,7 @@
 
     Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
-- files固件设置文件替换，可以把固件设置好的etc文件夹里面的设置文件拉到这里来，编译好固件后就直接是你设置好的了，不需要重复设置。是不是固件里面的etc文件夹所有的设置文件都可以替换，这个我也没做尝试，你们自己尝试下吧<br>
+- files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
     
     我在【Lede_x86_64】里面放了个smartdns做列子，你们拉取仓库后可以删除了
 #
