--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,6 +1,6 @@
 # 脚本简单介绍，新手最好认真的看看，或者对你有帮助的
 
-- 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用每个源码x86文件夹做为编译其他机型使用<br>
+- 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码x86文件夹做为编译其他机型使用<br>
 - 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码。选择【Lienol_x86_64】是Lienol的19.07。选择【Project_x86_64】是ctcgfw的18.06。一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 - 2、<br>
@@ -12,20 +12,20 @@
 #
 - 5、build-对应机型的 diy、pacthes、files 文件夹说明
 
-- diy文件夹里面可以按源码对应路径放入文件替换源码文件，能替换啥那些你们自己多做研究吧，我在所有机型里面放了banner文件文件<br>
+- diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按路径替换所有的文件，我在所有机型里面放了banner文件文件<br>
 
 
     你喜欢的话可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
 
 #
 - pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误  [提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)<br><br>
-    我在【Lede_x86_64】里面做了个增加DNS、网关、IPV4广播的patch补丁，不适合所有人使用的，你们拉取仓库后删除了吧。<br>
+    我在【Lede_x86_64】里面做了个增加DNS、网关、IPV4广播的patch补丁，这个就是网络的lan口设置，你们可以根据自己需求修改一下里面的ip的，如果没这需求就删除了，做例子用的<br>
 
     Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
 - files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
     
-    我在【Lede_x86_64】里面放了个smartdns做列子，你们拉取仓库后可以删除了
+    我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了
 #
 - 6、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧
 #
