--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -23,7 +23,7 @@
 
     Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一到要根据各个作者源码文件来制作
 #
-- files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
+- files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
     
     我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了
 #
