--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -25,7 +25,7 @@
 #
 - files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
     
-    我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了，你们用[WinSCP](https://github.com/danshui-git/shuoming/blob/master/ms.md)安装好的固件去看看这些文件的路径，再对比一下我放文件的路径，就能知道其他文件怎么放了
+    我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了，你们用[WinSCP](https://winscp.net/eng/download.php)连接安装好的固件去看看这些文件的路径，再对比一下我放文件的路径，就能知道其他文件怎么放了
 #
 - 5、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧
 #
