--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -18,7 +18,7 @@
     你喜欢的话可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
 
 #
-- pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误  [提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)<br><br>
+- pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，或者出现编译错误  [提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)<br>
 #####    我在【Lede_x86_64】里面做了个增加DNS、网关、IPV4广播的patch补丁，这个就是网络的lan口设置，你们可以根据自己需求修改一下里面的ip的，如果没这需求就删除了，做例子用的<br>
 
     Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一定要根据各个作者源码文件来制作
