--- a/定时编译说明.md
+++ b/定时编译说明.md
@@ -1,4 +1,18 @@
 # 定时编译说明：
+
+- 开启定时编译方法
+             
+      #定时触发开始编译(开启定时编译请先确认SSH处在关闭状态,要不然SSH没人管,会卡SSH编译失败)
+      #  schedule:
+      #    - cron: 0 8 */5 * *
+      
+      把前面#去掉就开启了，看下面，就把前面的#去掉，要看好格式，格式不对是不会开启的
+      
+      #定时触发开始编译(开启定时编译请先确认SSH处在关闭状态,要不然SSH没人管,会卡SSH编译失败)
+        schedule:
+          - cron: 0 8 */5 * *
+      
+
 # 
 - 把《.config》配置好后，如果在不需要修改配置的情况下，在build文件夹里面的对应机型文件夹的‘settings.ini’设置关闭SSH功能，就可以设置定时编译，或者在手机上启动编译（定时编译一定要关闭SSH功能，要不然SSH那里没管的话就会卡在那里，编译失败）
 # 
