--- a/手动开始.md
+++ b/手动开始.md
@@ -5,7 +5,7 @@
 ## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
 #
 #
-# 如果需要SSH远程，又没设置好电报机器人接收SSH代码的话，就一定要操作到最后那个图片那里，等SSH展开，复制代码
+# 如果需要SSH远程，又没设置好电报机器人接收SSH代码的话，就一定要操作到下面最后那个图片那里，等SSH展开，复制代码
 #
 - 如果已经连接了SSH后选择完插件，就一路退出到yes or no那里按yes保存配置，然后必定要正确按键盘Ctrl+d结束SSH连接才会继续编译
 #
