--- a/手动开始.md
+++ b/手动开始.md
@@ -9,7 +9,7 @@
 #
 - 如果已经连接了SSH后选择完插件，就一路退出到yes or no那里按yes保存配置，然后必定要正确按键盘Ctrl+d结束SSH连接才会继续编译
 #
-##### 如果打开了SSH功能，又没去用代码连接的话，就要等30分钟后才会自动跳到下一步继续编译
+- ### 如果打开了SSH功能，又没去用代码连接的话，就要等30分钟后才会自动跳到下一步继续编译
 #
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd003.png" />
 ## -!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd004.png" />
