--- a/4固件下载.md
+++ b/4固件下载.md
@@ -1,11 +1,8 @@
 # 固件下载及固件体积说明：
 #
 
-- 固件下载有2处地方都可以下的，找到地方点固件名字就可以下载了
+- 固件下载，找到地方点固件名字就可以下载了
 #
-- 1、第一处
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia2.png" />
 #
 #
-- 2、第二处
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia1.png" />
