--- a/定时编译说明.md
+++ b/定时编译说明.md
@@ -2,13 +2,13 @@
 
 - 开启定时编译方法
              
-      #定时触发开始编译(开启定时编译请先确认SSH处在关闭状态,要不然SSH没人管,会卡SSH编译失败)
+      #定时触发开始编译(把下面两个#去掉开启,时间设置请看定时编译说明)
       #  schedule:
       #    - cron: 0 8 */5 * *
       
       把前面#去掉就开启了，看下面，就把前面的#去掉，要看好格式，格式不对是不会开启的
       
-      #定时触发开始编译(开启定时编译请先确认SSH处在关闭状态,要不然SSH没人管,会卡SSH编译失败)
+      #定时触发开始编译(把下面两个#去掉开启,时间设置请看定时编译说明)
         schedule:
           - cron: 0 8 */5 * *
       
