--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,4 +1,4 @@
-# 脚本简单介绍，新手最好认真的看看，或者对你有帮助的
+# 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 
 - 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码x86文件夹做为编译其他机型使用<br>
 - 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码(5.4内核)。选择【Lienol_x86_64】是Lienol的19.07(4.14内核)。选择【Project_x86_64】是ctcgfw的18.06(4.19内核)。一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
@@ -29,4 +29,4 @@
 #
 - 5、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧
 #
-- 6、微信通知跟自动发布固件功能。[教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)
+- 6、##### 微信通知跟自动发布固功能，在没设置好密匙的情况下，请不要打开微信通知跟自动发布功能。[微信通知跟自动发布固功能密匙获取跟使用教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)
