--- a/n1.md
+++ b/n1.md
@@ -5,4 +5,4 @@
 - 3、这是我根据作者描述个人理解为这样的，我没N1盒子没办法测试，有谁测试过的什么情况请告知
 - 4、写盘工具推荐使用[Etcher](https://www.balena.io/etcher/)
 #
-- 自动打包工具是来自【[tuanqing大神](https://github.com/tuanqing/mknop)】作品，根据网友测试他的NTFS格式优盘挂载热拔插有问题，已修复，还有就是增加了CPU频率跟温度显示
+- 自动打包工具是来自【[tuanqing大神](https://github.com/tuanqing/mknop)】脚本
