--- a/n1.md
+++ b/n1.md
@@ -1,7 +1,7 @@
 ## 写入emmc方法
 #
 - 1、编译完成之后解压出.img文件，使用【balenaEtcher】把镜像写入U盘在盒子上启动，之后用固件里的ttyd（命令窗）或者SSH执行 n1-install 命令，即可把固件安装到 emmc
-- 2、如果本来就是openwrt的，将固件上传到 /tmp/upgrade( xxx.img )，之后执行 n1-update 即可从该固件升级
+- 2、如果本来就是openwrt的，将固件上传到 /tmp/upgrade 目录下,固件格式为( xxx.img )，之后执行 n1-update 即可从该固件升级
 - 3、这是我根据作者描述个人理解为这样的，我没N1盒子没办法测试，有谁测试过的什么情况请告知
 - 4、写盘工具推荐使用[Etcher](https://www.balena.io/etcher/)
 #
