--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,7 +10,7 @@
 - 3、<br>
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/331.png" />
 #
-- 4、build-对应机型的 diy、pacthes、files 文件夹说明
+- ## 4、build-对应机型的 diy、pacthes、files 文件夹说明
 
 - diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们自己看看我放的banner文件跟源码路径的关系就懂怎么放其他文件了<br>
 
