--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -27,6 +27,6 @@
     
 - #####    我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了，你们用[WinSCP](https://winscp.net/eng/download.php)连接安装好的固件去看看这些文件的路径，再对比一下我放文件的路径，就能知道其他文件怎么放了
 #
-- 5、k2p固件默认是不能超过15MB的，我打了个补丁在那里，设置了31MB大小了，就是没机器测试，不知道编译出来的固件可以不可以使用，newifi_d2的固件默认是不能超过31MB，可以打补丁修改增加固件体积的，就是没机器测试，都不知道增加体积后的固件能不能刷到机器里，刷了后正常不正常，你们自己多做尝试吧
+- 5、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，K2P默认是15MB大小，好像是有32MB的机子吧，如果可以用32MB大小固件的就需要打个补丁，让源码可以支持到32MB，其他机子都一样道理的
 #
 - ### 6、微信通知跟自动发布固功能，在没设置好密匙的情况下，请不要打开微信通知跟自动发布功能。 《[微信通知跟自动发布固功能密匙获取跟使用教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》 
