--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,11 +1,10 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 
-- 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码x86文件夹做为编译其他机型使用<br>
-
-> 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码(5.4内核)。
->> 选择【Lienol_x86_64】是Lienol的19.07(4.14内核)。
->>> 选择【Project_x86_64】是ctcgfw的18.06(4.19内核)。
->>>> 一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
+> 1、build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码x86文件夹做为编译其他机型使用<br>
+>> 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码(5.4内核)。
+>>> 选择【Lienol_x86_64】是Lienol的19.07(4.14内核)。
+>>>> 选择【Project_x86_64】是ctcgfw的18.06(4.19内核)。
+>>>>> 一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
 ----
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 #
