--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -6,6 +6,7 @@
 >>>> 选择【Project_x86_64】是ctcgfw的18.06(4.19内核)。
 >>>>> 一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
 ----
+- ### 你也可以复制X86的文件夹来制作其他机型使用的，修改下名字还有更换一下 .config 配置就可以了
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
 #
 - # 2、<br>
