--- a/新补丁.md
+++ b/新补丁.md
@@ -6,4 +6,14 @@
 - 要记住test1.txt是原内容，你在源码文件复制内容过来粘贴保存，- test2.txt是修改好的，你复制内容过来粘贴后，修改好，保存，然后使用命令
 - `git diff test1.txt test2.txt > test.patch`
 #
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/x001.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding1.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding2.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding3.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding4.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding5.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding6.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding7.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding8.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding9.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding10.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/buding11.png" />
