--- a/手动开始.md
+++ b/手动开始.md
@@ -3,6 +3,6 @@
 ## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd0012.png" />
 #
 #
-## 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤一步步来就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
+## 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤1、2、3、4一步步点击就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
 ## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd002.png" />
 #
