--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,21 +1,19 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 - # 1、
->build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码x86文件夹做为编译其他机型使用<br>
->> 比如说你选择【Lede_x86_64】其实就等于是一个编译脚本了，这个是lede源码(5.4内核)。
->>> 选择【Lienol_x86_64】是Lienol的19.07(4.14内核)。
->>>> 选择【Project_x86_64】是ctcgfw的18.06(4.19内核)。
->>>>> 一句话说完就是每个源码的x86都是一个编译系统，没找到你需要的机型，你就用x86的进行编译就可以了，需要SSH连接服务器修改对应的机型还有插件那些。
+>build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码公用机型文件夹做为编译其他机型使用<br>
+>> 【Lede_openwrt】这个是Lede的公用机型文件夹。《[源码仓库](https://github.com/coolsnowwolf/lede)》
+>>> 【Lienol_openwrt】这个是Lienol的公用机型文件夹。《[源码仓库](https://github.com/coolsnowwolf/lede)》
+>>>> 【Project_openwrt】这个是Project的公用机型文件夹。《[源码仓库](https://github.com/coolsnowwolf/lede)》
+>>>>> 一句话说完就是每个源码的公用机型文件夹都是一个编译系统，没找到你需要的机型，你就用公用机型文件夹进行编译就可以了，需要SSH连接服务器修改对应你需要编译的机型还有插件那些。
 ----
-- ### 你也可以复制X86的文件夹来制作其他机型使用的，修改下名字还有更换一下 .config 配置就可以了
-# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x1.png" />
-#
+- ### 你也可以复制各源码的公用机型文件夹来制作其他机型使用的，建立文件夹时候修改一下文件夹名字，然后把 .config 配置文件设置好就可以了，也可以编译完成后再来设置.config文件的，编译的时候SSH连接服务器，修改好你要的机型、插件编译成功后会有一个.config文件，记事本打开把里面的内容全复制然后覆盖进你新建立的机型文件夹里面的.config里面就好
 - # 2、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x221.png" />
 #
 - # 3、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/3331.png" />
 #
-- # 4、build-对应机型的 diy、pacthes、files 文件夹说明
+- # 4、build-对应机型的 diy、pacthes、files 文件夹说明，善用这3个文件夹会给你编译带来很多方便
 ----
 - diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们自己看看我放的banner文件跟源码路径的关系就懂怎么放其他文件了<br>
 
