--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -32,7 +32,7 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
 ---
 
-- ### 使用命令扩展空间,这个是编译的时候就自动编译进去了，能不能用就大家测试吧
+- ### 使用命令扩展空间,这个不管开不开把定时插件编译进固件都默认自动编译进去了，能不能用就大家测试吧
 ```
 使用一键扩展内部空间\挂载 Samba 共享脚本:
 打开TTYD 终端或命令窗,输入bash /bin/AutoBuild_Tools.sh
