--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -4,7 +4,7 @@
 
 - ### 测试方法，分别在两个时间段启动编译，比如1:00启动一个编译,然后1:05分启动一个编译，完成后，安装1:00的，就会自动检测到1:05的
 #
-- ### 在build/机型文件夹/settings.ini，以下三项设置好就可以把定时更新固件的插件编译进openwrt
+- #### 在build/机型文件夹/settings.ini，以下三项设置好就可以把定时更新固件的插件编译进openwrt，已自动适配固件名字跟后缀的机型，打开开关就可以直接编译了，无需设置固件名字跟后缀
 
 ```
 REGULAR_UPDATE="false"        #把定时自动更新编译进固件（true=开启）（false=关闭）
