--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -10,7 +10,7 @@
 ```
 REGULAR_UPDATE="false"        #把定时自动更新编译进固件（true=开启）（false=关闭）
 Updete_firmware="squashfs-combined.img.gz"     #你在openwrt后台升级时候所用的固件名称
-Extension=".img.gz"       #openwrt后台升级候所用固件名称的后缀，后缀前面要带点【x86是.img.gz】【k3是.trx】
+Extension="img.gz"       #openwrt后台升级候所用固件名称的后缀，比如【x86是img.gz】【k3是trx】，前面不带点
 ```
 
 - ### 自动在你现有的.config配置增加以下二个插件，免除SSH进去选择
