--- a/选择机型.md
+++ b/选择机型.md
@@ -9,7 +9,4 @@
 
 
 #
-# 如果没有你想编译的机型，就选用三个源码lede、Lienol、Project中的x86_64来编译，编译的时候用SSH远程连接服务器修改配置就可以了。
-   
-# 
-# 其实所谓的机型就.config配置文件不一样而已，你要自己增加机型就复制lede、Lienol或者Project的x86_64文件来建立就可以了，修改下名字，等你编译的时候开启SSH远程连接服务器修改好配置，编译成功后，会有一个.config的配置文件的，复制它的内容粘贴到你建立的机型文件夹中的.config文件就好了
+# 《[如果没有你想编译的机型，请看](https://github.com/danshui-git/shuoming/blob/master/%E7%AE%80%E5%8D%95%E4%BB%8B%E7%BB%8D%E6%96%B0%E8%84%9A%E6%9C%AC.md)》
