--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -39,7 +39,8 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 打开TTYD 终端或命令窗,输入bash /bin/AutoBuild_Tools.sh
 ```
 ---
-
+- 定时更新插件检测规则说明
+- !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/.png" />
 
 
 ---
