--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -40,7 +40,7 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 ```
 ---
 - 定时更新插件检测规则说明
-- !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/ds123.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/ds123.png" />
 
 
 ---
