--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -4,16 +4,8 @@
 
 - ### 测试方法，分别在两个时间段启动编译，比如1:00启动一个编译,然后1:05分启动一个编译，完成后，安装1:00的，就会自动检测到1:05的
 #
-- #### 在build/机型文件夹/settings.ini，以下三项设置好就可以把定时更新固件的插件编译进openwrt，已自动适配固件名字跟后缀的机型，打开开关就可以直接编译了，无需设置固件名字跟后缀
-- 已自动适配机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3）
+- 定时升级固件功能只支持已自动适配机型，适配机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3），你想要支持的可以自己适配
 
-```
-REGULAR_UPDATE="false"        #把定时自动更新编译进固件（true=开启）（false=关闭）
-Updete_firmware="squashfs-combined.img.gz"     #你在openwrt后台升级时候所用的固件名称，请使用完整名称
-Extension="img.gz"       #openwrt后台升级候所用固件名称的后缀，比如【x86是img.gz】【k3是trx】，前面不带点
-```
-
-- ### 自动在你现有的.config配置增加以下二个插件，免除SSH进去选择
 ```
 luci-app-autoupdate=y    定时更新插件
 luci-app-ttyd=y        openwrt内置SSH命令窗
