--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,12 +1,12 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 - # 1、
 >build文件夹里面就是编译脚本了，如果没找到你需要编译的机型文件就用各个源码公用机型文件夹做为编译其他机型使用<br>
->> 【Lede_openwrt】这个是Lede的公用机型文件夹。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
->>> 【Lienol_openwrt】这个是Lienol的公用机型文件夹。《[源码出处链接](https://github.com/Lienol/openwrt)》
->>>> 【Project_openwrt】这个是Project的公用机型文件夹。《[源码出处链接](https://github.com/immortalwrt/immortalwrt)》
+>> 【Lede_x86_64】这个是Lede的公用机型文件夹。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
+>>> 【Lienol_x86_64】这个是Lienol的公用机型文件夹。《[源码出处链接](https://github.com/Lienol/openwrt)》
+>>>> 【Project_x86_64】这个是Project的公用机型文件夹。《[源码出处链接](https://github.com/immortalwrt/immortalwrt)》
 >>>>> 一句话说完就是每个源码的公用机型文件夹都是一个编译系统，没找到你需要的机型，你就用公用机型文件夹进行编译就可以了，需要SSH连接服务器修改对应你需要编译的机型还有插件那些。
 ----
-- ### 你也可以复制各源码的公用机型文件夹来制作其他机型使用的，建立文件夹时候修改一下文件夹名字，然后把 .config 配置文件设置好就可以了，也可以编译完成后再来设置.config文件的，编译的时候SSH连接服务器，修改好你要的机型、插件编译成功后会有一个.config文件，记事本打开把里面的内容全复制然后覆盖进你新建立的机型文件夹里面的.config里面就好(文件的名字不要弄特殊符号,不要使用中文的,符号就使用‘_’下横杠就好了)
+- ### 你也可以复制各源码的公用机型文件夹来制作其他机型使用的，建立文件夹时候修改一下文件夹名字，然后把 .config 配置文件设置好就可以了，也可以编译完成后再来设置.config文件的，编译的时候SSH连接服务器，修改好你要的机型、插件编译成功后会有一个.config文件，记事本打开把里面的内容全复制然后覆盖进你新建立的机型文件夹里面的.config里面就好(文件的名字不要弄特殊符号,不要使用中文的,符号就使用‘_’下横杠就好了,比如你要建立R2S的机型，Lede_r2s或者Lede_nanopi_r2s)
 - # 2、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x221.png" />
 #
