--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -6,6 +6,8 @@
 #
 - 定时升级固件功能只支持已自动适配机型，适配机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3），你想要支持的可以自己适配
 
+- 如果有你已经适配的机型，请在build/机型文件/settings.ini里面把REGULAR_UPDATE="false"改成REGULAR_UPDATE="true"就可以把定时更新插件编译进固件了
+
 ```
 luci-app-autoupdate=y    定时更新插件
 luci-app-ttyd=y        openwrt内置SSH命令窗
