--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -20,6 +20,8 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 检查更新(保留配置): bash /bin/AutoUpdate.sh
 
 检查更新(不保留配置): bash /bin/AutoUpdate.sh -n
+
+更多详情：bash /bin/AutoUpdate.sh -help
 ```
 
 - ### 定时更新设置:
