--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -21,7 +21,9 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
 检查更新(不保留配置): bash /bin/AutoUpdate.sh -n
 
-更多详情：bash /bin/AutoUpdate.sh -help
+查看定时更新部分信息：bash /bin/AutoUpdate.sh -
+
+查看更多使用方法：bash /bin/AutoUpdate.sh -help
 ```
 
 - ### 定时更新设置:
