--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -15,7 +15,7 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 ---
 - ### 使用命令更新固件脚本:
 ```
-首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,按需输入下方指令:
+首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用putty按需输入下方指令:
 
 检查更新(保留配置): bash /bin/AutoUpdate.sh
 
