--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -21,6 +21,10 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
 检查更新(不保留配置): bash /bin/AutoUpdate.sh -n
 
+更换其他作者固件(不保留配置): bash /bin/AutoUpdate.sh -f
+
+测试模式,观看运行步骤(不安装固件): bash /bin/AutoUpdate.sh -t
+
 查看更多使用方法：bash /bin/AutoUpdate.sh -h
 ```
 
