--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -38,4 +38,4 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
    - [dhxh](https://github.com/dhxh/Openwrt-Build)
 
-   - 定时更新脚本是由[dhxh](https://github.com/dhxh/Openwrt-Build)从[Hyy2001X](https://github.com/Hyy2001X/AutoBuild-Actions)基础修改完成
+   - 定时更新脚本是由[dhxh](https://github.com/dhxh/Openwrt-Build)从[Hyy2001X](https://github.com/Hyy2001X/AutoBuild-Actions)大神的脚本改编而来的，感谢两位大神的奉献！
