--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -1,10 +1,10 @@
-- ## 如果要把定时更新插件编译进固件，就一定要先设置好发布密匙，因为编译完成会把固件发布到ginthub到时候检测更新就是检测github的发布地址
+- 如果要把定时更新插件编译进固件，就一定要先设置好发布密匙，因为编译完成会把固件发布到ginthub到时候检测更新就是检测github的发布地址
 
-- ### 理论上在openwet后台可以升级的都应该可以支持定时更新，后台升级地址｛openwrt-系统-备份/升级｝，R2S/R4S这些用TF卡的就不支持，N1不支持
+- 理论上在openwet后台可以升级的都应该可以支持定时更新，后台升级地址｛openwrt-系统-备份/升级｝，R2S/R4S这些用TF卡的就不支持，N1不支持
 
-- ### 测试方法，分别在两个时间段启动编译，比如1:00启动一个编译,然后1:05分启动一个编译，完成后，安装1:00的，就会自动检测到1:05的
-#
-- 定时升级固件功能只支持已自动适配机型，适配机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3），你想要支持的可以自己适配
+- 定时升级固件功能能支持什么机型我也不了解，已测试机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3、小米的几个机型），现有机型都自动适配了固件，其他的都适配成‘sysupgrade.bin’这样格式的固件。
+
+- 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用WinSCP工具连接你的路由器，然后把固件拖进路由器的tmp文件夹里面或者其他文件
 
 - 如果有你已经适配的机型，请在 build/机型文件/settings.ini 里面把 REGULAR_UPDATE="false" 改成 REGULAR_UPDATE="true" 就可以把定时更新插件编译进固件了
 
