--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -6,8 +6,17 @@
 
 - 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用WinSCP工具连接你的路由器，然后把固件拖进路由器的tmp文件夹里面或者overlay文件夹里面，然后用网站自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具都可以，用工具得要先连接你的路由器，然后用命令进入你放固件的文件夹，比如你放在tmp文件夹就输入 cd /tmp 进入文件夹后就用升级命令更新固件，如果能顺利安装固件的话，就表示你的路由器可以用定时更新插件了，命令是：sysupgrade -F -n 固件完整名字+后缀
 ```
+回顾上面步骤，把固件拖入tmp或overlay，然后进入文件夹
+
 cd /tmp
+或
 cd /overlay
+
+进入文件夹后使用升级命令
+
+sysupgrade -F -n 固件完整名字+后缀
+
+比如：
 sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
