--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -15,21 +15,16 @@
 #
 - # 4、build-对应机型的 diy、pacthes、files 文件夹说明，善用这3个文件夹会给你编译带来很多方便
 ----
-- diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们自己看看我放的banner文件跟源码路径的关系就懂怎么放其他文件了<br>
-
-
-    你喜欢的话可以修改banner打造个性openwrt，Project源码的banner名字为openwrt_banner<br>
+- diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们自己看看我放的banner文件跟源码路径的关系就懂怎么放其他文件了,你喜欢的话可以修改banner打造个性openwrt<br>
 
 ----
 - pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，编译的时候到了【加载源,patch补丁和自定义设置】就会错误 《[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)》 <br>
-- #####    我在【Lede_x86_64】里面做了个增加DNS、网关、IPV4广播的patch补丁，这个就是网络的lan口设置，你们可以根据自己需求修改一下里面的ip的，如果没这需求就删除了，做例子用的<br><br>
 
-    Lienol跟lede、Project有些文件做出来的补丁不通用的，所以你们要做补丁的时候一定要根据各个作者源码文件来制作
+    Lienol跟lede、Mortal有些文件做出来的补丁不通用的，所以你们要做补丁的时候一定要根据各个作者源码文件来制作
 ----
-- files文件夹，固件文件替换使用，可以把安装好使用中的固件设置好的文件提取出来然后在files文件夹按固件的路径建立对应的文件就可以，编译好固件后就直接是你设置好的了，不需要重复设置。<br>
-    
-- #####    我在【Lede_x86_64】里面放了个smartdns做例子，你们拉取仓库后可以删除了，你们用[WinSCP](https://winscp.net/eng/download.php)连接安装好的固件去看看这些文件的路径，再对比一下我放文件的路径，就能知道其他文件怎么放了
+- files文件夹，是用来存放你编译好固件然后安装好固件后设置好的文件，固件的文件在什么位置(路径),你就按什么路径来替换存放文件，编译固件的时候会自动按你设置路径的文件自动覆盖到固件原有的文件，这样就达到了固件编译好就是你设置好的文件了，不需要重复设置。<br>
+
 ----
-- 5、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，K2P默认是15MB大小，好像是有32MB的机子吧，如果可以用32MB大小固件的就需要打个补丁，让源码可以支持到32MB，其他机子都一样道理的
+- 5、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，就比如K2P闪存是16M的，但是固件体积最大只能15.2MB大小，超过就不行了
 ----
 - ### 6、微信通知跟自动发布固功能，在没设置好密匙的情况下，请不要打开微信通知跟自动发布功能。 《[微信通知跟自动发布固功能密匙获取跟使用教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》 
