--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -38,7 +38,7 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
 测试模式,观看运行步骤(不安装固件): bash /bin/AutoUpdate.sh -t
 
-查看更多使用方法：bash /bin/AutoUpdate.sh -h
+查看详细信息和命令使用方法：bash /bin/AutoUpdate.sh -h
 ```
 
 - ### 定时更新设置:
