--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -1,11 +1,8 @@
 # 拉取仓库说明：
 #
-- 拉取仓库有2个方法
+- 拉取仓库
 #
 - 1、方法一
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
 #
-#
-- 2、方法二
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la1.png" />
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la2.png" />
+
