--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -5,7 +5,8 @@
 - 比如你仓库原本就有一个 build-openwrt 名字才仓库，拉取我仓库后，仓库名字就是  build-openwrt-1
 - 如果出现这个情况，请在仓库的Settings那里修改一下仓库名称，带-1的情况有可能会发送一些奇奇怪怪的问题的
 #
-- 1、方法一
+- 1、
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
 #
-
+- 仓库改名字方法
+!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la15.png" />
