--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -9,5 +9,5 @@
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
 #
 ---
-# 如果出现带个-1的情况，改名字方法
+- # 如果出现带个-1的情况，改名字方法
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la15.png" />
