--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -2,8 +2,8 @@
 #
 - 拉取仓库
 - 如果你仓库有跟我仓库同名的仓库存在，拉取我的仓库后就在名字后加带个-1的情况
-- 比如你仓库原本就有一个 build-openwrt 名字才仓库，拉取我仓库后，仓库名字就是  build-openwrt-1
-- 如果出现这个情况，请在仓库的Settings那里修改一下仓库名称，带-1的情况有可能会发送一些奇奇怪怪的问题的
+- 比如你仓库原本就有一个 build-openwrt 名字的仓库，拉取我仓库后，拉到我的仓库名字就是  build-openwrt-1
+- 如果出现这个情况，请在仓库的Settings那里修改一下仓库名称，带-1的情况有可能会发生一些奇奇怪怪的问题的
 #
 - 1、
 !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
