--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -4,9 +4,8 @@
 >> 【Lienol_source】这个是Lienol-19.07的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/Lienol/openwrt/tree/19.07)》
 >>> 【openwrt_amlogic】这个是编译N1和晶晨系列盒子固件专用。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
 >>>> 【Mortal_source】这个是immortalwrt-21.02的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》
->>>>> 一句话说完就是每个源码的公用机型文件夹都是一个编译系统，你在编译之前设置好打开‘SSH连接服务器’，然后脚本运行至‘SSH连接服务器’时候按教程修改你需要编译的机型还有增删插件那些设置。
 ----
-- ### 你也可以复制各源码的公用机型文件夹来制作其他机型使用的，建立文件夹时候修改一下文件夹名字，然后把 .config 配置文件设置好就可以了，也可以编译完成后再来设置.config文件的，编译的时候SSH连接服务器，修改好你要的机型、插件编译成功后会有一个.config文件，记事本打开把里面的内容全复制然后覆盖进你新建立的机型文件夹里面的.config里面就好(文件的名字不要弄特殊符号,不要使用中文的,符号就使用‘_’下横杠就好了,比如你要建立R2S的机型，Lede_r2s或者Lede_nanopi_r2s)《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
+- ### 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 - # 2、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x221.png" />
 #
