--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -4,6 +4,7 @@
 >> 【Lienol_source】这个是Lienol-19.07的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/Lienol/openwrt/tree/19.07)》
 >>> 【openwrt_amlogic】这个是编译N1和晶晨系列盒子固件专用。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
 >>>> 【Mortal_source】这个是immortalwrt-21.02的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》
+>>>>> 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
 - ### 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 - # 2、<br>
