--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,6 +1,6 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 - # 1、
-> 【Lede_source】这个是Lede-18.06的源码公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
+> 《[Lede_source](https://github.com/coolsnowwolf/lede)》这个是Lede-18.06的源码公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。
 >> 【Lienol_source】这个是Lienol-19.07的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/Lienol/openwrt/tree/19.07)》
 >>> 【Mortal_source】这个是immortalwrt-21.02的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。《[源码出处链接](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》
 >>>> 【openwrt_amlogic】这个是编译N1和晶晨系列盒子固件专用。《[源码出处链接](https://github.com/coolsnowwolf/lede)》
