--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -43,7 +43,7 @@ luci-app-ttyd=y        openwrt内置SSH命令窗
 
 - ### 定时更新设置:
 - 首先需要打开 Openwrt 主页,点击系统-定时更新 ，定时更新勾选上，设置好时间，保存设置就可以了（定时自动更新是保留配置更新的）
-- !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx.png" />
 
 ---
 ## 鸣谢
