--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -1,4 +1,4 @@
-- 如果要把定时更新插件编译进固件，就一定要先设置好发布密匙，因为编译完成会把固件发布到ginthub到时候检测更新就是检测github的发布地址《[教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》
+- 如果要把定时更新插件编译进固件，就一定要先设置好发布密匙，因为编译完成会把固件发布到ginthub到时候检测更新就是检测github的发布地址《[密匙设置教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》
 
 - 理论上在openwet后台可以升级的都应该可以支持定时更新，后台升级地址｛openwrt-系统-备份/升级｝，R2S/R4S这些用TF卡的就不支持，N1不支持
 
