--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -14,24 +14,34 @@
 #
 
 
-    - name: 整理固件文件夹（删除文件示例，在上下 rm -rf 中间增加代码，这个只是我随便整理的一个模板，实际要删除什么，要你自己编译好固件后再决定）
+    - name: 整理固件文件夹
       id: organizer
       run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages && mkdir packages
-        find -name "*.buildinfo*" | xargs -i mv -f {} packages
-        find -name "*sha256sums*" | xargs -i mv -f {} packages
-        find -name "*.manifest*" | xargs -i mv -f {} packages
-        find -name "*.bin*" | xargs -i mv -f {} packages
-        find -name "*efi.vmdk*" | xargs -i mv -f {} packages
-        find -name "*rootfs.img*" | xargs -i mv -f {} packages
+        if [ "${Modelfile}" == "openwrt_amlogic" ]; then
+          source "${PATH1}/common.sh" && Diy_amlogic
+        fi
+        cd openwrt
+        cp -Rf bin/targets/*/* "${Home}"/upgrade
+        cd bin && mkdir config
+        cp -Rf targets/*/*/config.buildinfo "${Home}"/bin/config/config.txt
+        cd targets/*/*
+        find -name "*.buildinfo*" | xargs -i rm -rf {}
+        find -name "*sha256sums*" | xargs -i rm -rf {}
+        find -name "*.manifest*" | xargs -i rm -rf {}
+        find -name "*rootfs*" | xargs -i rm -rf {}
         rm -rf packages
-        echo "::set-env name=FIRMWARE::$PWD"
+        rename -v "s/^openwrt/${{ env.date1 }}-${{ env.CODE }}/" *
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        echo "BOT=TRUE" >> $GITHUB_ENV
         echo "::set-output name=status::success"
         
+---    
+! <img src="https://github.com/danshui-git/shuoming/blob/master/doc/s1.png" />
+---  
+
  #       
 -  编译时候删除不要的固件，不过要在主文件.yml里面手动增加的     
-- 在上面的2个rm -rf中间按我给的代码增加就可以了，比如我现在删除feeds.buildinfo跟version.buildinfo和sha256sums三个文件
+- 在上面的cd targets/*/* 跟 rm -rf packages之间，按我给的代码增加就可以了，比如我现在删除feeds.buildinfo跟version.buildinfo和sha256sums三个文件
 - 文件名可以全名
 - 可以.后缀,比如【.bin】，这样就删除了全部.bin后缀的固件，因为X86机型我不需要这样的固件就删除了，其他机型要删除什么你不需要的就按你自己需要删除，其他的也一样道理
 - 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
