--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -36,7 +36,7 @@
         echo "::set-output name=status::success"
         
 ---    
-- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/s1.png" />
+ <img src="https://github.com/danshui-git/shuoming/blob/master/doc/s1.png" />
 ---  
 
  #       
