--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,5 +1,8 @@
 # 编译时候删除不需要的文件（减负固件包）
 
+-  编译时候删除不要的固件，不过要在主文件build-openwrt.yml里面手动增加的 
+```
+
     - name: 整理固件文件夹
       id: organizer
       run: |
@@ -20,20 +23,10 @@
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "BOT=TRUE" >> $GITHUB_ENV
         echo "::set-output name=status::success"
-        
----    
- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu.png" />
+```     
 ---  
-
- #       
--  编译时候删除不要的固件，不过要在主文件.yml里面手动增加的     
-- 在上面的cd targets/*/* 跟 rm -rf packages之间，按我给的代码增加就可以了，比如我现在删除feeds.buildinfo跟version.buildinfo和sha256sums三个文件
-- 文件名可以全名
-- 可以.后缀,比如【.bin】，这样就删除了全部.bin后缀的固件，因为X86机型我不需要这样的固件就删除了，其他机型要删除什么你不需要的就按你自己需要删除，其他的也一样道理
-- 可以XXX.后缀的，比如【efi.vmdk】，【combined.vmdk】这样就可以区分多个vmdk分别删除了，我填写efi.vmdk他只会删除这个文件，不会删除combined.vmdk
-- 上面那些文件名是怎么来的，你只要细心的看看你编译好固件后的固件文件夹里面就可以看出来了
-- 反正编译时候选择好安装格式，然后编译成功一次后，在固件文件夹里面，有啥不想要的，看好他的名字，就这里增加他，以后编译，他就不会再出现在固件包中了
-- 一定要编译成功一次后再来删除不需要的固件，因为各个机型不一样，编译成功后，在固件文件夹里面有你不需要的再来这里删除
+ <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu.png" />
+---
 #
 #
 #
