--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -18,8 +18,8 @@ sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
 ```
-luci-app-autoupdate=y    定时更新插件
-luci-app-ttyd=y        openwrt内置SSH命令窗
+luci-app-autoupdate    定时更新插件
+luci-app-ttyd        openwrt内置SSH命令窗
 ```
 ---
 - ### 使用命令更新固件脚本:
